# security-camera

./: .env.example  .gitignore  README.md  pyproject.toml
people/: .gitkeep
people/person_template/: README.txt
people/person_template/pictures/: .gitkeep
people/template/: README.txt  prompt.txt
people/unknown/: prompt.txt
scripts/: add_person.py
src/: __init__.py  config.py  main.py
src/realtime/: __init__.py  audio_io.py  client.py  prompts.py  session.py
src/recognition/: __init__.py  embedder.py  face_db.py  matcher.py  trigger.py
src/vision/: __init__.py  camera.py  overlay.py  recorder.py
