[project]
name = "security-camera"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "insightface>=0.7.3",
    "loguru>=0.7.3",
    "numpy>=2.4.2",
    "onnxruntime>=1.24.1",
    "openai[realtime]>=2.0.0",
    "opencv-python>=4.13.0.92",
    "python-dotenv>=1.2.1",
    "sounddevice>=0.5.5",
]
